--- a/src/xinx.rc
+++ b/src/xinx.rc
@@ -1,1 +1,39 @@
+1 VERSIONINFO
+FILEVERSION 0, 6, 2, 0
+PRODUCTVERSION 0, 6, 0, 0
+FILEFLAGSMASK 0x3fL
+#ifdef _DEBUG
+FILEFLAGS 0x9L
+#else
+FILEFLAGS 0x8L
+#endif
+FILEOS 0x4L
+FILETYPE 0x1L
+FILESUBTYPE 0x0L
+BEGIN
+  BLOCK "StringFileInfo"
+  BEGIN
+      BLOCK "040904b0"
+      BEGIN
+		VALUE "Comments", "\0"
+		VALUE "CompanyName", "Generix"
+		VALUE "FileDescription", "XINX is not XDME"
+        VALUE "FileVersion", "0, 6, 2, 0"
+        VALUE "InternalName", "xinx"
+        VALUE "LegalCopyright", "Copyleft (C) U. Van Den Hekke 2007"
+		VALUE "LegalTrademarks", "\0"
+        VALUE "OriginalFilename", "xinx.exe"
+		VALUE "PrivateBuild", "\0"
+        VALUE "ProductName", "XINX"
+        VALUE "ProductVersion", "0, 6, 2, 0"
+		VALUE "SpecialBuild", "\0"
+      END
+  END
+  BLOCK "VarFileInfo"
+  BEGIN
+      VALUE "Translation", 0x409, 1200
+  END
+END
+
 IDI_ICON1               ICON    DISCARDABLE     "images/xinx.ico"
+
