--- a/rc/xinx.rc
+++ b/rc/xinx.rc
@@ -35,5 +35,5 @@ BEGIN
   END
 END
 
-IDI_ICON1               ICON    DISCARDABLE     "images/xinx.ico"
+IDI_ICON1               ICON    DISCARDABLE     "../images/xinx.ico"
 
