--- a/plugins/baseplugin/CMakeLists.txt
+++ b/plugins/baseplugin/CMakeLists.txt
@@ -1,16 +1,16 @@
 include(${QT_USE_FILE})
 
-set(xmlplugin_SRCS
-	xmlplugin.cpp
+set(baseplugin_SRCS
+	baseplugin.cpp
 )
 
-SET(xmlplugin_MOC_HDRS
-	xmlplugin.h
+SET(baseplugin_MOC_HDRS
+	baseplugin.h
 )
 
 include_directories(../../src ${CMAKE_CURRENT_BINARY_DIR} ${QT_INCLUDE_DIR})
 
-QT4_WRAP_CPP(xmlplugin_MOC_SRCS ${xmlplugin_MOC_HDRS})
+QT4_WRAP_CPP(baseplugin_MOC_SRCS ${baseplugin_MOC_HDRS})
 
 add_definitions(-O2)
 add_definitions(-Wall)
@@ -19,8 +19,8 @@ add_definitions(-DQT_PLUGIN)
 add_definitions(-DQT_NO_DEBUG)
 add_definitions(-DQT_SHARED)
 
-add_library(xinx_xmlplugin SHARED ${xmlplugin_SRCS} ${xmlplugin_MOC_SRCS})
-target_link_libraries(xinx_xmlplugin ${QT_LIBRARIES})
+add_library(xinx_baseplugin SHARED ${baseplugin_SRCS} ${baseplugin_MOC_SRCS})
+target_link_libraries(xinx_baseplugin ${QT_LIBRARIES})
 
-install(TARGETS xinx_xmlplugin DESTINATION bin/plugins)
+install(TARGETS xinx_baseplugin DESTINATION bin/plugins)
 
