--- a/xinx/rc/xinx.rc
+++ b/xinx/rc/xinx.rc
@@ -1,6 +1,6 @@
 1 VERSIONINFO
-FILEVERSION 0, 6, 11, 0
-PRODUCTVERSION 0, 6, 0, 0
+FILEVERSION 0, 7, 0, 0
+PRODUCTVERSION 0, 7, 0, 0
 FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
 FILEFLAGS 0x9L
@@ -18,14 +18,14 @@ BEGIN
 		VALUE "Comments", "\0"
 		VALUE "CompanyName", "Ulrich Van Den Hekke"
 		VALUE "FileDescription", "XINX is not XDME"
-        VALUE "FileVersion", "0, 6, 11, 0"
+        VALUE "FileVersion", "0, 7, 0, 0"
         VALUE "InternalName", "xinx"
         VALUE "LegalCopyright", "Copyleft (C) U. Van Den Hekke 2007"
 		VALUE "LegalTrademarks", "\0"
         VALUE "OriginalFilename", "xinx.exe"
 		VALUE "PrivateBuild", "\0"
         VALUE "ProductName", "XINX"
-        VALUE "ProductVersion", "0, 6, 0, 0"
+        VALUE "ProductVersion", "0, 7, 0, 0"
 		VALUE "SpecialBuild", "\0"
       END
   END
@@ -35,5 +35,5 @@ BEGIN
   END
 END
 
-IDI_ICON1               ICON    DISCARDABLE     "../images/xinx.ico"
+IDI_ICON1               ICON    DISCARDABLE     "images/xinx.ico"
 
