--- a/libxinx/CMakeLists.txt
+++ b/libxinx/CMakeLists.txt
@@ -9,7 +9,7 @@ SET(xinxplugins_MOC_HDRS
     filecontentstructure.h
 )
 
-include_directories( ${CMAKE_CURRENT_BINARY_DIR} ${QT_INCLUDE_DIR} )
+include_directories( . ${CMAKE_CURRENT_BINARY_DIR} ${QT_INCLUDE_DIR} )
 
 QT4_WRAP_CPP(xinxplugins_MOC_SRCS ${xinxplugins_MOC_HDRS})
 
@@ -19,8 +19,8 @@ add_definitions(${QT_DEFINITIONS})
 add_definitions(-DQT_NO_DEBUG)
 add_definitions(-DQT_SHARED)
 
-add_library(xinx STATIC ${xinxplugins_SRCS} ${xinxplugins_MOC_SRCS})
-target_link_libraries(xinx ${QT_LIBRARIES})
+add_library(sharedxinx STATIC ${xinxplugins_SRCS} ${xinxplugins_MOC_SRCS})
+target_link_libraries(sharedxinx ${QT_LIBRARIES})
 
-install(TARGETS xinx DESTINATION bin/plugins)
+install(TARGETS sharedxinx DESTINATION bin/plugins)
 
