--- a/plugins/webplugin/CMakeLists.txt
+++ b/plugins/webplugin/CMakeLists.txt
@@ -34,6 +34,7 @@ SET(webplugin_MOC_HDRS
 include_directories(../../libxinx ${CMAKE_CURRENT_BINARY_DIR} ${QT_INCLUDE_DIR})
 
 QT4_WRAP_CPP(webplugin_MOC_SRCS ${webplugin_MOC_HDRS})
+QT4_ADD_RESOURCES(webplugin_QRC_H webplugin.qrc)
 
 add_definitions(-O2)
 add_definitions(-Wall)
@@ -42,9 +43,9 @@ add_definitions(-DQT_PLUGIN)
 add_definitions(-DQT_NO_DEBUG)
 add_definitions(-DQT_SHARED)
 
-add_library(webplugin SHARED ${webplugin_SRCS} ${webplugin_MOC_SRCS})
+add_library(webplugin SHARED ${webplugin_SRCS} ${webplugin_MOC_SRCS} ${webplugin_QRC_H})
 link_directories(../libxinx)
-target_link_libraries(webplugin ${QT_LIBRARIES} xinxplugins)
+target_link_libraries(webplugin ${QT_LIBRARIES} sharedxinx)
 
 install(TARGETS webplugin DESTINATION bin/plugins)
 
