fixes #205 : Regression Qt4

--- a/libxinx/CMakeLists.txt
+++ b/libxinx/CMakeLists.txt
@@ -1,17 +1,54 @@
 include(${QT_USE_FILE})
 
-set(xinxplugins_SRCS
-    exceptions.cpp
-    filecontentstructure.cpp
+set(libxinx_SRCS
+	abstracteditor.cpp
+	abstractfileeditor.cpp
+	appsettings.cpp
+	borderlayout.cpp
+	exceptions.cpp
+	filecontentitemmodel.cpp
+	filecontentstructure.cpp
+	filewatcher.cpp
+	itemmodelfileeditor.cpp
+	numberbar.cpp
+	rcs.cpp
+	syntaxhighlighter.cpp
+	texteditor.cpp
+	textfileeditor.cpp
+	xinxconfig.cpp
+	xinxcore.cpp
+	xinxpluginsloader.cpp
+	xinxthread.cpp
+	xslproject.cpp
 )
 
-SET(xinxplugins_MOC_HDRS
-    filecontentstructure.h
+SET(libxinx_MOC_HDRS
+	abstracteditor.h
+	abstractfileeditor.h
+	appsettings.h
+	borderlayout.h
+	exceptions.h
+	filecontentitemmodel.h
+	filecontentstructure.h
+	filewatcher.h
+	itemmodelfileeditor.h
+	numberbar.h
+	p_filewatcher.h
+	plugininterfaces.h
+	rcs.h
+	syntaxhighlighter.h
+	texteditor.h
+	textfileeditor.h
+	xinxconfig.h
+	xinxcore.h
+	xinxpluginsloader.h
+	xinxthread.h
+	xslproject.h
 )
 
 include_directories( . ${CMAKE_CURRENT_BINARY_DIR} ${QT_INCLUDE_DIR} )
 
-QT4_WRAP_CPP(xinxplugins_MOC_SRCS ${xinxplugins_MOC_HDRS})
+QT4_WRAP_CPP(libxinx_MOC_SRCS ${libxinx_MOC_HDRS})
 
 add_definitions(-O2)
 add_definitions(-Wall)
@@ -19,8 +56,8 @@ add_definitions(${QT_DEFINITIONS})
 add_definitions(-DQT_NO_DEBUG)
 add_definitions(-DQT_SHARED)
 
-add_library(sharedxinx STATIC ${xinxplugins_SRCS} ${xinxplugins_MOC_SRCS})
+add_library(sharedxinx SHARED ${libxinx_SRCS} ${libxinx_MOC_SRCS})
 target_link_libraries(sharedxinx ${QT_LIBRARIES})
 
-install(TARGETS sharedxinx DESTINATION bin/plugins)
+install(TARGETS sharedxinx DESTINATION bin)
 
