--- a/xinx/CMakeLists.txt
+++ b/xinx/CMakeLists.txt
@@ -6,165 +6,108 @@ include(${QT_USE_FILE})
 
 add_definitions(-O2)
 add_definitions(-Wall)
+add_definitions(-DQT_NO_DEBUG)
 add_definitions(${QT_DEFINITIONS})
-include_directories( ./ ../libxinx ${CMAKE_CURRENT_BINARY_DIR} ${QT_INCLUDE_DIR})
+include_directories( ./ ../libxinx ../components ${CMAKE_CURRENT_BINARY_DIR} ${QT_INCLUDE_DIR})
 
 set(xinx_SRCS
-	xinxlistwidgetimpl.cpp
-	plugindialog.cpp
-	xinxpluginsloader.cpp
-	specifiquedlgimpl.cpp
 	aboutdialogimpl.cpp
-	appsettings.cpp
 	commitmessagedialogimpl.cpp
 	configurationfile.cpp
-	connectionwebservicesdialogimpl.cpp
 	customdialogimpl.cpp
-	cvsfiles.cpp
-	cvsthread.cpp
-	directoryedit.cpp
 	dirrcsmodel.cpp
-	editor.cpp
 	filecontentdockwidget.cpp
-	filecontentitemmodel.cpp
-	fileeditor.cpp
-	filewatcher.cpp
 	flattreeview.cpp
-	globals.cpp
 	iconprojectprovider.cpp
-	kcolorcombo.cpp
 	main.cpp
 	mainformimpl.cpp
-	numberbar.cpp
-	objectview.cpp
+	newprojectwizard.cpp
 	projectdirectorydockwidget.cpp
 	projectpropertyimpl.cpp
-	rcs.cpp
-	rcs_cvs.cpp
 	rcslogdialogimpl.cpp
 	replacedialogimpl.cpp
 	runsnipetdialogimpl.cpp
-	serviceresultdialogimpl.cpp
+	scriptmanager.cpp
 	snipet.cpp
 	snipetdialog.cpp
+	snipetdockwidget.cpp
 	snipetlist.cpp
-	snipetmodel.cpp
-	soap.cpp
-	syntaxhighlighter.cpp
-	tabeditor.cpp
-	texteditor.cpp
-	threadedconfigurationfile.cpp
-	uniqueapplication.cpp
-	webservices.cpp
-	webserviceseditor.cpp
-	wsdl.cpp
-	xinxconfig.cpp
-	xmlpresentationdockwidget.cpp
-	xmlpresentationitem.cpp
-	xslproject.cpp
-	xinxthread.cpp
+	specifiquedlgimpl.cpp
 	studioadaptor.cpp
 	studiointerface.cpp
-	newprojectwizard.cpp
+	tabeditor.cpp
+	threadedconfigurationfile.cpp
+	uniqueapplication.cpp
+	xmlpresentationdockwidget.cpp
+	xmlpresentationitem.cpp
 )
 
 SET(xinx_MOC_HDRS
-	xinxlistwidgetimpl.h
-	plugindialog.h
-	specifiquedlgimpl.h
-	xinxthread.h
 	aboutdialogimpl.h
 	commitmessagedialogimpl.h
-	connectionwebservicesdialogimpl.h
+	configurationfile.h
 	customdialogimpl.h
-	cvsfiles.h
-	cvsthread.h
-	directoryedit.h
 	dirrcsmodel.h
-	editor.h
 	filecontentdockwidget.h
-	filecontentitemmodel.h
-	fileeditor.h
-	filewatcher.h
 	flattreeview.h
-	globals.h
-	kcolorcombo.h
+	iconprojectprovider.h
 	mainformimpl.h
-	numberbar.h
-	objectview.h
-	private/p_connectionwebservicesdialogimpl.h
-	private/p_filecontentdockwidget.h
-	private/p_filewatcher.h
-	private/p_mainformimpl.h
-	private/p_projectdirectorydockwidget.h
-	private/p_rcs_cvs.h
-	private/p_threadedconfigurationfile.h
-	private/p_uniqueapplication.h
-	private/p_xmlpresentationdockwidget.h
-	private/p_flattreeview.h
-	private/p_runsnipetdialogimpl.h
-	private/p_serviceresultdialogimpl.h
-	private/p_snipetdialog.h
-	private/p_snipetlist.h
-	private/p_webserviceseditor.h
+	newprojectwizard.h
 	projectdirectorydockwidget.h
 	projectpropertyimpl.h
-	rcs.h
-	rcs_cvs.h
 	rcslogdialogimpl.h
 	replacedialogimpl.h
 	runsnipetdialogimpl.h
-	serviceresultdialogimpl.h
-	snipet.h
+	scriptmanager.h
 	snipetdialog.h
+	snipetdockwidget.h
+	snipet.h
 	snipetlist.h
-	syntaxhighlighter.h
-	tabeditor.h
-	texteditor.h
-	threadedconfigurationfile.h
-	uniqueapplication.h
-	webservices.h
-	webserviceseditor.h
-	xmlpresentationdockwidget.h
-	xmlpresentationitem.h
-	xslproject.h
+	specifiquedlgimpl.h
 	studioadaptor.h
 	studiointerface.h
-	newprojectwizard.h
+	tabeditor.h
+	threadedconfigurationfile.h
+	uniqueapplication.h
+	xmlpresentationdockwidget.h
+	xmlpresentationitem.h
+	private/p_configurationfile.h
+	private/p_customdialogimpl.h
+	private/p_filecontentdockwidget.h
+	private/p_flattreeview.h
+	private/p_mainformimpl.h
+	private/p_projectdirectorydockwidget.h
+	private/p_threadedconfigurationfile.h
+	private/p_uniqueapplication.h
+	private/p_xmlpresentationdockwidget.h
 )
 
 SET(xinx_UIS
-	ui/specifiquedlg.ui
 	ui/about.ui
 	ui/commitmessages.ui
 	ui/custom.ui
 	ui/mainform.ui
+	ui/newprojectwizard_project.ui
+	ui/newprojectwizard_specifique.ui
 	ui/projectdirectorywidget.ui
 	ui/projectproperty.ui
 	ui/rcslogform.ui
 	ui/replace.ui
-	ui/resultatServices.ui
 	ui/runsnipet.ui
-	ui/servicesconnection.ui
 	ui/snipetproperty.ui
+	ui/specifiquedlg.ui
 	ui/xmlpresentationwidget.ui
-	ui/plugindialog.ui
-	ui/newprojectwizard_project.ui 
-	ui/newprojectwizard_specifique.ui 
-	ui/newprojectwizard_services.ui 
-	ui/newprojectwizard_serviceslist.ui
-	ui/xinxlistwidget.ui
 )
 
-SET(xinx_RCS
-	rc/xinx.rc
-)
 
 QT4_WRAP_CPP(xinx_MOC_SRCS ${xinx_MOC_HDRS})
 QT4_WRAP_UI(xinx_UIS_H ${xinx_UIS})
 QT4_ADD_RESOURCES(xinx_QRC_H application.qrc)
 
 if(WIN32)
+	SET(xinx_RCS
+		rc/xinx.rc
+	)
 	add_custom_command( OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/xinx_ico.obj
 		COMMAND windres.exe -I${CMAKE_CURRENT_SOURCE_DIR} -o ${CMAKE_CURRENT_BINARY_DIR}/xinx_ico.obj -i${CMAKE_CURRENT_SOURCE_DIR}/${xinx_RCS}
 	)
@@ -172,8 +115,8 @@ if(WIN32)
 endif(WIN32)
 
 add_executable(xinx WIN32 ${xinx_SRCS} ${xinx_MOC_SRCS} ${xinx_UIS_H} ${xinx_QRC_H} ${xinx_RESS})
-link_directories(../libxinx)
-target_link_libraries(xinx ${QT_LIBRARIES} sharedxinx)
+link_directories(../plugins ../libxinx ../components)
+target_link_libraries(xinx ${QT_LIBRARIES} webplugin sharedxinx xinxcmp)
 
 install(TARGETS xinx DESTINATION bin)
 install(FILES xml/template.xnx DESTINATION xml)
