--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
 find_package(Qt4 REQUIRED) # find and setup Qt4 for this project
 
 add_subdirectory(libxinx)
+add_subdirectory(components)
 add_subdirectory(plugins)
 add_subdirectory(xinx)
-add_subdirectory(doc)
+add_subdirectory(xinxprojectwizard)
