--- a/debian/rules
+++ b/debian/rules
@@ -1,98 +1,19 @@
 #!/usr/bin/make -f
-# -*- makefile -*-
-# Sample debian/rules that uses debhelper.
-# This file was originally written by Joey Hess and Craig Small.
-# As a special exception, when this file is copied by dh-make into a
-# dh-make output file, you may use that output file without restriction.
-# This special exception was added by Craig Small in version 0.37 of dh-make.
+include /usr/share/cdbs/1/rules/debhelper.mk
+include /usr/share/cdbs/1/class/qmake.mk
+QMAKE=qmake-qt4
 
-# Uncomment this to turn on verbose mode.
-#export DH_VERBOSE=1
+install/xinx::
+        mkdir $(DEB_DESTDIR)/usr/
+        mkdir $(DEB_DESTDIR)/usr/bin/
+        cp $(CURDIR)/xinx/xinx $(DEB_DESTDIR)/usr/bin/
+        cp $(CURDIR)/xinxprojectwizard/xinxprojectwizard $(DEB_DESTDIR)/usr/bin/
+        mkdir $(DEB_DESTDIR)/usr/lib/
+        cp $(CURDIR)/libxinx/libsharedxinx* $(DEB_DESTDIR)/usr/lib/
 
-
-
-
-CFLAGS = -Wall -g
-
-ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
-	CFLAGS += -O0
-else
-	CFLAGS += -O2
-endif
-
-configure: configure-stamp
-configure-stamp:
-	dh_testdir
-	qmake-qt4
-
-	touch configure-stamp
-
-
-build: build-stamp
-
-build-stamp: configure-stamp 
-	dh_testdir
-
-	# Add here commands to compile the package.
-	$(MAKE)
-	#docbook-to-man debian/xinx.sgml > xinx.1
-
-	touch $@
-
-clean:
-	dh_testdir
-	dh_testroot
-	rm -f build-stamp configure-stamp
-
-	# Add here commands to clean up after the build process.
-	-$(MAKE) clean
-
-	dh_clean 
-
-install: build
-	dh_testdir
-	dh_testroot
-	dh_clean -k 
-	dh_installdirs
-
-	# Add here commands to install the package into debian/xinx.
-	$(MAKE) DESTDIR=$(CURDIR)/debian/xinx install
-
-
-# Build architecture-independent files here.
-binary-indep: build install
-# We have nothing to do by default.
-
-# Build architecture-dependent files here.
-binary-arch: build install
-	dh_testdir
-	dh_testroot
-	dh_installchangelogs 
-	dh_installdocs
-	dh_installexamples
-#	dh_install
-#	dh_installmenu
-#	dh_installdebconf	
-#	dh_installlogrotate
-#	dh_installemacsen
-#	dh_installpam
-#	dh_installmime
-#	dh_python
-#	dh_installinit
-#	dh_installcron
-#	dh_installinfo
-	dh_installman
-	dh_link
-	dh_strip
-	dh_compress
-	dh_fixperms
-#	dh_perl
-#	dh_makeshlibs
-	dh_installdeb
-	dh_shlibdeps
-	dh_gencontrol
-	dh_md5sums
-	dh_builddeb
-
-binary: binary-indep binary-arch
-.PHONY: build clean binary-indep binary-arch binary install configure
+install/xinx-doc
+        mkdir $(DEB_DESTDIR)/usr/
+        mkdir $(DEB_DESTDIR)/usr/share/
+        mkdir $(DEB_DESTDIR)/usr/share/doc/
+        mkdir $(DEB_DESTDIR)/usr/share/doc/xinx-doc/
+        cp -a $(CURDIR)/doc/* $(DEB_DESTDIR)/usr/share/doc/xinx-doc/
