--- a/debian/control
+++ b/debian/control
@@ -1,19 +1,20 @@
 Source: xinx
 Section: devel
-Priority: optional
+Priority: extra
 Maintainer: Ulrich Van Den Hekke <xinx@shadoware.org>
-Build-Depends: debhelper (>= 5)
-Standards-Version: 3.7.2
+Build-Depends: debhelper (>= 7)
+Standards-Version: 3.7.3
+Homepage: http://xinx.shadoware.org/
 
 Package: xinx
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: XSL/JS/HTML editor for Generix
- XINX is an editor of XSL stylesheet, JavaScript, Cascading Style Sheet
- 
+ XINX is an editor of XSL stylesheet, JavaScript, Cascading Style Sheet.
  This editor is used with egx.
 
 Package: xinx-doc
 Architecture: all
+Depends: xinx (>= 0.7.2.0)
 Description: Documentation for xinx
- 
+ Technical Documentation of XINX
