--- a/debian/rules
+++ b/debian/rules
@@ -8,10 +8,34 @@ install/xinx::
 	mkdir $(CURDIR)/debian/xinx/usr/bin/
 	cp $(CURDIR)/xinx/xinx $(CURDIR)/debian/xinx/usr/bin/
 	cp $(CURDIR)/xinxprojectwizard/xinxprojectwizard $(CURDIR)/debian/xinx/usr/bin/
+	
 	mkdir $(CURDIR)/debian/xinx/usr/lib/
 	cp $(CURDIR)/libxinx/libsharedxinx* $(CURDIR)/debian/xinx/usr/lib/
-	mkdir $(CURDIR)/debian/xinx/usr/lib/xinx/
-	cp $(CURDIR)/plugins/*.so $(CURDIR)/debian/xinx/usr/lib/xinx/
+	
+install/xinx-plugins-services::
+	mkdir $(CURDIR)/debian/xinx-plugins-services/usr/share/
+	mkdir $(CURDIR)/debian/xinx-plugins-services/usr/share/xinx/
+	mkdir $(CURDIR)/debian/xinx-plugins-services/usr/share/xinx/plugins/
+	cp $(CURDIR)/plugins/libservices.so $(CURDIR)/debian/xinx-plugins-services/usr/share/xinx/plugins/
+
+install/xinx-plugins-cvs::
+	mkdir $(CURDIR)/debian/xinx-plugins-cvs/usr/share/
+	mkdir $(CURDIR)/debian/xinx-plugins-cvs/usr/share/xinx/
+	mkdir $(CURDIR)/debian/xinx-plugins-cvs/usr/share/xinx/plugins/
+	cp $(CURDIR)/plugins/libcvsplugin.so $(CURDIR)/debian/xinx-plugins-cvs/usr/share/xinx/plugins/
+
+install/xinx-plugins-svn::
+	mkdir $(CURDIR)/debian/xinx-plugins-svn/usr/share/
+	mkdir $(CURDIR)/debian/xinx-plugins-svn/usr/share/xinx/
+	mkdir $(CURDIR)/debian/xinx-plugins-svn/usr/share/xinx/plugins/
+	cp $(CURDIR)/plugins/libsvnplugin.so $(CURDIR)/debian/xinx-plugins-svn/usr/share/xinx/plugins/
+
+install/xinx-scripts::
+	mkdir $(CURDIR)/debian/xinx-scripts/usr/share/
+	mkdir $(CURDIR)/debian/xinx-scripts/usr/share/xinx/
+	mkdir $(CURDIR)/debian/xinx-scripts/usr/share/xinx/scripts/
+	cp $(CURDIR)/scripts/*.js $(CURDIR)/debian/xinx-scripts/usr/share/xinx/script/
+	cp $(CURDIR)/scripts/*.xq $(CURDIR)/debian/xinx-scripts/usr/share/xinx/script/
 
 install/xinx-doc::
 	mkdir $(CURDIR)/debian/xinx-doc/usr/
