Update changelog and debian package

--- a/debian/control
+++ b/debian/control
@@ -19,34 +19,41 @@ Description: XSL/JS/HTML editor for Generix
 Package: xinx-plugins-services
 Section: devel
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, xinx (= 0.7.2.0)
+Depends: ${shlibs:Depends}, ${misc:Depends}, xinx (= 0.8.1.0)
 Description: WebServices plugins library for XINX
  Add the WebServices capabilities to XINX
  
 Package: xinx-plugins-cvs
 Section: devel
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, xinx (= 0.7.2.0), cvs | cvsnt
+Depends: ${shlibs:Depends}, ${misc:Depends}, xinx (= 0.8.1.0), cvs | cvsnt
 Description: CVS plugins library for XINX
  Add the CVS capabilities to XINX
  
 Package: xinx-plugins-svn
 Section: devel
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, xinx (= 0.7.2.0), subversion
+Depends: ${shlibs:Depends}, ${misc:Depends}, xinx (= 0.8.1.0), subversion
 Description: SubVersion plugins library for XINX
  Add the SubVersion capabilities to XINX
+
+Package: xinx-plugins-dictionary
+Section: devel
+Architecture: any
+Depends: ${shlibs:Depends}, ${misc:Depends}, xinx (= 0.8.1.0)
+Description: Add a dictionary dock to XINX
+ Add a dictionary dock to XINX to open dictinary format of GCE130+
 
 Package: xinx-scripts
 Section: devel
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, xinx (>= 0.7.2.0)
+Depends: ${shlibs:Depends}, ${misc:Depends}, xinx (>= 0.8.1.0)
 Description: Default Scripts for XINX
  Default Script for XINX
  
 Package: xinx-doc
 Section: doc
 Architecture: all
-Depends: xinx (>= 0.7.2.0)
+Depends: xinx (>= 0.8.1.0)
 Description: Documentation for xinx
  Technical Documentation of XINX
