--- a/xinx/rc/xinx.rc
+++ b/xinx/rc/xinx.rc
@@ -1,6 +1,6 @@
 1 VERSIONINFO
-FILEVERSION 0, 8, 1, 0
-PRODUCTVERSION 0, 8, 1, 0
+FILEVERSION XINX_VERSION
+PRODUCTVERSION XINX_VERSION
 FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
 FILEFLAGS 0x9L
@@ -11,23 +11,23 @@ FILEOS 0x4L
 FILETYPE 0x1L
 FILESUBTYPE 0x0L
 BEGIN
-  BLOCK "StringFileInfo"
-  BEGIN
-      BLOCK "040904b0"
-      BEGIN
-		VALUE "Comments", "\0"
-		VALUE "CompanyName", "Ulrich Van Den Hekke"
-		VALUE "FileDescription", "XINX Application"
-        VALUE "FileVersion", "0, 8, 1, 0"
-        VALUE "InternalName", "xinx"
-        VALUE "LegalCopyright", "Copyleft (C) U. Van Den Hekke 2009"
-		VALUE "LegalTrademarks", "\0"
-        VALUE "OriginalFilename", "xinx.exe"
-		VALUE "PrivateBuild", "\0"
-        VALUE "ProductName", "XINX"
-        VALUE "ProductVersion", "0, 8, 1, 0"
-		VALUE "SpecialBuild", "\0"
-      END
+	BLOCK "StringFileInfo"
+	BEGIN
+		BLOCK "040904b0"
+		BEGIN
+			VALUE "Comments", "\0"
+			VALUE "CompanyName", "Ulrich Van Den Hekke"
+			VALUE "FileDescription", "XINX Application"
+			VALUE "FileVersion", TOSTRING(XINX_VERSION)
+			VALUE "InternalName", "xinx"
+			VALUE "LegalCopyright", "Copyleft (C) U. Van Den Hekke 2009"
+			VALUE "LegalTrademarks", "\0"
+			VALUE "OriginalFilename", "xinx.exe"
+			VALUE "PrivateBuild", "\0"
+			VALUE "ProductName", "XINX"
+			VALUE "ProductVersion", TOSTRING(XINX_VERSION)
+			VALUE "SpecialBuild", "\0"
+		END
   END
   BLOCK "VarFileInfo"
   BEGIN
