--- a/ext/libxslt/win32/Makefile.mingw
+++ b/ext/libxslt/win32/Makefile.mingw
@@ -88,7 +88,8 @@ XSLT_OBJS = $(XSLT_INTDIR)/attributes.o\
 	$(XSLT_INTDIR)/variables.o\
 	$(XSLT_INTDIR)/xslt.o\
 	$(XSLT_INTDIR)/xsltlocale.o\
-	$(XSLT_INTDIR)/xsltutils.o
+	$(XSLT_INTDIR)/xsltutils.o\
+	$(XSLT_INTDIR)/attrvt.o
 XSLT_SRCS = $(subst .o,.c,$(subst $(XSLT_INTDIR),$(XSLT_SRCDIR),$(XSLT_OBJS)))
 
 # Static libxslt object files.
@@ -109,7 +110,8 @@ XSLT_OBJS_A = $(XSLT_INTDIR_A)/attributes.o\
 	$(XSLT_INTDIR_A)/variables.o\
 	$(XSLT_INTDIR_A)/xslt.o\
 	$(XSLT_INTDIR_A)/xsltlocale.o\
-	$(XSLT_INTDIR_A)/xsltutils.o
+	$(XSLT_INTDIR_A)/xsltutils.o\
+	$(XSLT_INTDIR_A)/attrvt.o
 
 # Libexslt object files.
 EXSLT_OBJS = $(EXSLT_INTDIR)/common.o\
@@ -281,10 +283,11 @@ $(UTILS_INTDIR) :
 
 # An implicit rule for xsltproc and friends.
 APPLIBS = $(LIBS)
-APPLIBS += -llibxml2 -l$(XSLT_BASENAME) -l$(EXSLT_BASENAME)
+APPLIBS += $(LIBPREFIX)/libxml2.dll bin.mingw/$(XSLT_BASENAME).dll bin.mingw/$(EXSLT_BASENAME).dll
 APP_LDFLAGS = $(LDFLAGS)
-APP_LDFLAGS += -Wl,--major-image-version,$(LIBXSLT_MAJOR_VERSION)
+APP_LDFLAGS += -Wl,--major-image-version,$(LIBXSLT_MAJOR_VERSION) 
 APP_LDFLAGS += -Wl,--minor-image-version,$(LIBXSLT_MINOR_VERSION)
+APP_LDFLAGS += -Wl,--enable-auto-import
 ifeq ($(STATIC),1)
 CFLAGS += -DLIBXML_STATIC -DLIBXSLT_STATIC -DLIBEXSLT_STATIC
 APP_LDFLAGS += -Bstatic
